--- a/15.html
+++ b/15.html
@@ -12,7 +12,7 @@
 
 
 $(function(){
-//	$(".box").find("input").click(function(){
+	$(".box").find("input").click(function(){
 //		$.ajax({
 //		type:"post",
 //		url:"php/data.php",
@@ -29,7 +29,7 @@ $(function(){
 	$(".box").find("div").eq($(this).index("input")).attr("class","active").siblings("div").attr("class","");
 	
 });
-
+});
 
 </script>
 </head>
