--- a/15.html
+++ b/15.html
@@ -13,21 +13,19 @@
 
 $(function(){
 	$(".box").find("input").click(function(){
-//		$.ajax({
-//		type:"post",
-//		url:"php/data.php",
-//		async:true,
-//		success:function(data){
+		$.ajax({
+		type:"post",
+		url:"https://github.com/sinrry6301/zxys/tree/master/php",
+		async:true,
+		success:function(data){
+			console.log(data);
 //			if(data=0){
 //				$("#div1 div").eq(data).html(data);
 //			}
-//		}
-//	});
-//
-//	});
-		$(this).attr("class","on").siblings("input").attr("class","");
+		}
+	});
+	$(this).attr("class","on").siblings("input").attr("class","");
 	$(".box").find("div").eq($(this).index("input")).attr("class","active").siblings("div").attr("class","");
-	
 });
 });
 
