--- a/15.html
+++ b/15.html
@@ -15,7 +15,7 @@ $(function(){
 	$(".box").find("input").click(function(){
 		$.ajax({
 		type:"post",
-		url:"https://github.com/sinrry6301/zxys/tree/master/php",
+		url:"https://github.com/sinrry6301/zxys/tree/master/php/data.php",
 		async:true,
 		success:function(data){
 			console.log(data);
