--- a/15.html
+++ b/15.html
@@ -15,7 +15,7 @@ $(function(){
 	$("#div1").find("input").click(function(){
 		$.ajax({
 		type:"post",
-		url:"https://sinrry6301.github.io/zxys/php/data.php/data.php",
+		url:"https://sinrry6301.github.io/zxys/php/data.php",
 		success:function(data){
 			if(data==0){
 				console.log(data)
