--- a/15.html
+++ b/15.html
@@ -13,9 +13,8 @@
 
 $(function(){
 	$("#div1").find("input").click(function(){
-		$.ajax({
-		type:"post",
-		url:"https://sinrry6301.github.io/zxys/php/data.php",
+		$.getJSON({
+		url:"https://sinrry6301.github.io/zxys/php/data.php?callback=?",
 		success:function(data){
 			if(data==0){
 				console.log(data)
