--- a/15.html
+++ b/15.html
@@ -14,7 +14,7 @@
 $(function(){
 	$("#div1").find("input").click(function(){
 		$.getJSON({
-		url:"https://sinrry6301.github.io/zxys/php/data.php?callback=?",
+		url:"https://sinrry6301.github.io/zxys/php/data.php",
 		success:function(data){
 			if(data==0){
 				console.log(data)
