--- a/15.html
+++ b/15.html
@@ -16,10 +16,10 @@ $(function(){
 		$.getJSON({
 		url:"https://sinrry6301.github.io/zxys/php/data.php?callback=?",
 		success:function(data){
-			consloe.log(data);
+			consloe.log(data.num);
 			console.log(111111);
-			if(data==0){
-				console.log(data);
+			if(data.num==0){
+				console.log(data.num);
 			}
 		}
 	});
