--- a/15.html
+++ b/15.html
@@ -24,8 +24,8 @@ $(function(){
 			}
 		}
 	});
-	$(this).attr("class","on").siblings("input").attr("class","");
-	$(".box").find("div").eq($(this).index("input")).attr("class","active").siblings("div").attr("class","");
+//	$(this).attr("class","on").siblings("input").attr("class","");
+//	$(".box").find("div").eq($(this).index("input")).attr("class","active").siblings("div").attr("class","");
 });
 });
 
