--- a/15.html
+++ b/15.html
@@ -14,9 +14,9 @@
 $(function(){
 	$("#div1").find("input").click(function(){
 		$.getJSON({
-		url:"https://sinrry6301.github.io/zxys/php/data.php?callback=?",
-		data:$("#div1").html(),
-		success:function(callback){
+		"https://sinrry6301.github.io/zxys/php/data.php?callback=?",
+		{"rand":new Date().getTime()},
+		function(callback){
 			consloe.log(callback.num);
 			console.log(111111);
 			if(callback.num==0){
