--- a/15.html
+++ b/15.html
@@ -13,7 +13,7 @@
 
 $(function(){
 	$("#div1").find("input").click(function(){
-		$.getJSON("https://sinrry6301.github.io/zxys/php/data.php?callback=?",{"rand":new Date().getTime()},function(callback){
+		$.getJSON("https://sinrry6301.github.io/zxys/php/data.php?callback=?",{"callback":"callback","rand":new Date().getTime()},function(callback){
 			consloe.log(callback.num);
 			console.log(111111);
 			if(callback.num==0){
@@ -21,8 +21,6 @@ $(function(){
 			}
 		}
 	);
-//	$(this).attr("class","on").siblings("input").attr("class","");
-//	$(".box").find("div").eq($(this).index("input")).attr("class","active").siblings("div").attr("class","");
 });
 });
 
