--- a/15.html
+++ b/15.html
@@ -14,7 +14,7 @@
 $(function(){
 	$("#div1").find("input").click(function(){
 		$.getJSON("https://sinrry6301.github.io/zxys/php/data.php?callback=?",{"callback":"callback","rand":new Date().getTime()},function(callback){
-			consloe.log(callback.num);
+			console.log(callback.num);
 			console.log(111111);
 			if(callback.num==0){
 				console.log(data.num);
