--- a/15.html
+++ b/15.html
@@ -10,10 +10,10 @@
 <script src="js/jquery-1.11.1.js"></script>
 <script>
 
-
 $(function(){
+	var num=0;
 	$("#div1").find("input").click(function(){
-		$.getJSON("https://sinrry6301.github.io/zxys/php/data.php?callback=?",{"rand":new Date().getTime()},function(callback){
+		$.getJSON("http://localhost:8080/data.php?callback=?",{"num":num,"rand":new Date().getTime()},function(callback){
 //			console.log(callback.num);
 //			console.log(111111);
 			if(callback.num==0){
