--- a/9.html
+++ b/9.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title></title>
+		<title>图片懒加载</title>
 		<style>
 			div {
 				margin-top: 300px;
@@ -12,7 +12,6 @@
 				overflow: hidden;
 				border: 1px #000 solid;
 			}
-			
 			div img {
 				width: 470px;
 				height: 150px;
