--- a/1.html
+++ b/1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>色块处理</title>
 		<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
 		<style type="text/css">
 			*{margin:0;padding:10px;}
