--- a/11.html
+++ b/11.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>弹窗（上下左右垂直居中）</title>
 <style>
 *{ margin:0; padding:0;}
 #login{ width:300px; height:300px; background:white; border:1px #000 solid; position:absolute;left:0;top:0; display: none;}
