--- a/12.html
+++ b/12.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>无标题文档</title>
+<title>动态添加dom，并且交互行为同样复制</title>
 <style>
 #div1{ width:100px; height:100px; background:red; position:absolute;}
 </style>
