--- a/14-------.html
+++ b/14-------.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title></title>
+<title>缓动版焦点图</title>
 <style>
 body,ul,ol{margin:0;padding:0;}
 li{ list-style:none;}
