--- a/15.html
+++ b/15.html
@@ -1,41 +1,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
-<style>
-#div1 div{ width:200px; height:200px; border:1px #000 solid; display:none;}
-.active{ background:red;}
-</style>
-<script src="js/jquery-1.11.1.js"></script>
-<script>
 
-$(function(){
-	var num=0;
-	$("#div1").find("input").click(function(){
-		$.getJSON("https://localhost:8080/data.php?callback=?",{"num":0,"rand":new Date().getTime()},function(callback){
-//			console.log(callback.num);
-//			console.log(111111);
-			if(callback.num==0){
-				console.log(callback.num);
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>ajax动态版tab切换</title>
+		<style>
+			#div1 div {
+				width: 200px;
+				height: 200px;
+				border: 1px #000 solid;
+				display: none;
 			}
-		}
-	);
-});
-});
+			.on{display: block;}
+			.active {
+				background: red;
+			}
+		</style>
+		<script src="js/jquery-1.11.1.js"></script>
+		<script>
+			$(function() {
+				var num=0;
+				$.getJSON("http://localhost:8080/data.php?callback=?", {num:0,
+					"rand": new Date().getTime()
+				}, function(callback) {
+					if(num == 0) {
+						$("#div1").find("div").eq(num).html(callback);
+					}
+				});
+				$("#div1").find("input").click(function() {
+					$.getJSON("http://localhost:8080/data.php?callback=?",{"num":$(this).index(),"rand": new Date().getTime()
+				}, function(callback) {
+					if(num == 0) {
+						$("#div1").find("div").eq(num).html(callback);
+					}
+					else if(num == 1) {
+							$("#div1").find("div").eq(num).html(callback);
+					} else if(num == 2) {
+							$("#div1").find("div").eq(num).html(callback);
+					}
+					});	
+					$(this).attr("class","active").siblings("input").attr("class","");
+					$("#div1").find("div").eq($(this).index("input")).attr("class","on").siblings("div").attr("class","");
+					});
+			});
+		</script>
+	</head>
 
-</script>
-</head>
+	<body>
+		<div id="div1">
+			<input class="active" type="button" value="1" />
+			<input type="button" value="2" />
+			<input type="button" value="3" />
+			<div style="display:block">正在加载...</div>
+			<div>正在加载...</div>
+			<div>正在加载...</div>
+		</div>
 
-<body>
-<div id="div1">
-	<input class="active" type="button" value="1" />
-    <input type="button" value="2" />
-    <input type="button" value="3" />
-    <div style="display:block">正在加载...</div>
-    <div>正在加载...</div>
-    <div>正在加载...</div>
-</div>
+	</body>
 
-</body>
 </html>
