--- a/3.html
+++ b/3.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>抽奖</title>
 		<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
 		<style type="text/css">
 			*{margin:0;padding:0;list-style: none;font-style: normal;}
