--- a/5.html
+++ b/5.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>选项卡</title>
 		<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
 		<style type="text/css">
 			input{width:50px;height:30px; text-align: center;border:none;border:1px solid #333;line-height:30px;}
