--- a/6.html
+++ b/6.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>管理员用户切换</title>
 		<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
 	</head>
 	<body>
-			<input type="radio" name="1" id="" value="管理员" checked/>管理员
-			<input type="radio" name="1" id="" value="普通用户"/>普通用户
+		<input type="radio" name="1" id="" value="管理员" checked/>管理员
+		<input type="radio" name="1" id="" value="普通用户"/>普通用户
 		<a href="javascript:void(0);"><span id="spanid">编辑此处</span></a>
 		
 		<script type="text/javascript">
