--- a/7-----.html
+++ b/7-----.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>左右文字移动</title>
 		<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
 		<style type="text/css">
 			.textarea1,.textarea2{width:100px;height:100px;border:1px solid #333;padding:10px;overflow: auto;}
