--- a/8-----.html
+++ b/8-----.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>评分</title>
 		<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
 		<style type="text/css">
 			div{width:30px;height:30px;float:left;margin-right:10px;display: inline;border:1px solid #333; background: #cc0000;color:#fff; text-align: center;line-height:30px;}
