--- a/14-------.html
+++ b/14-------.html
@@ -20,6 +20,7 @@ ol .active{ background:#f60; color:#fff;}
 $(function(){
 	var $oli=$("ol li");
 	var num=0;
+	var temp=0;
 	var timer=null;
 	clearInterval(timer);
 	timer=setInterval(goon,2000);
