--- a/14_1---------.html
+++ b/14_1---------.html
@@ -10,59 +10,86 @@ img{ border:none; vertical-align:top; }
 #box{width:470px;height:150px; position:relative; margin:30px auto; overflow:hidden;}
 ul{ width:470px; position:relative;left:0; top:0; z-index:1;}
 ul li img{width:470px;height:150px;}
-ul li{width:470px;height:150px;overflow: hidden;position:absolute;left:0;top:0;}
+ul li{width:470px;height:150px;overflow: hidden;/*position:absolute;left:0;top:0;*/}
 ol{z-index:2; width:120px; position:absolute;right:10px; bottom:10px;}
 ol li{cursor: pointer; width:20px;height:20px; float:left;margin:0 2px; display:inline; background:#fff; color:#f60; line-height:20px; text-align:center;}
 ol .active{ background:#f60; color:#fff;}
 </style>
 <script src="js/jquery-1.11.1.js"></script>
 <script>
+//$(function(){
+//	var $oli=$("ol li");
+//	var $uli=$("ul li");
+//	var num=0;
+//	var temp=0;
+//	var timer=null;
+////	$uli.slice(1).each(function(){
+////		$(this).css("top",$uli.height())
+////	});
+//	clearInterval(timer);
+//	timer=setInterval(goon,2000);
+//	$("ol").delegate("li","mouseover",function(){
+//		clearInterval(timer);
+//		num=$(this).index();
+//		$uli.attr("class","active").siblings("li").attr("class","");
+//		if(temp < num){
+//			$uli.slice(1).css("top",$uli.height());
+//			$uli.eq(temp).animate({top:-$uli.height()},1000);
+//		}else if(temp > num){
+//			$uli.slice(1).css("top",-$uli.height());
+//			$uli.eq(temp).animate({top:$uli.height()},1000);
+//		}
+//		$uli.eq($(this).index()).animate({top:0},1000);
+//	});
+//	$("ol").delegate("li","mouseout",function(){
+//		timer=setInterval(goon,2000);
+//	});
+//	function goon(){
+//		if(num==$oli.length-1){
+//			num=0;
+//		}else{
+//			num++;
+//		}
+//		clearInterval(timer);
+//		$oli.eq(num).attr("class","active").siblings("li").attr("class","");
+//		if(temp < num){
+//			$uli.slice(1).css("top",$uli.height());
+//			$uli.eq(temp).animate({top:-$uli.height()},1000);
+//		}else if(temp > num){
+//			$uli.slice(1).css("top",-$uli.height());
+//			$uli.eq(temp).animate({top:$uli.height()},1000);
+//		}
+//		$uli.eq(num).animate({top:0},1000);
+//	}
+//})
+
+
 $(function(){
 	var $oli=$("ol li");
-	var $uli=$("ul li");
 	var num=0;
-	var temp=0;
 	var timer=null;
-//	$uli.slice(1).each(function(){
-//		$(this).css("top",$uli.height())
-//	});
 	clearInterval(timer);
 	timer=setInterval(goon,2000);
 	$("ol").delegate("li","mouseover",function(){
 		clearInterval(timer);
+		$(this).attr("class","active").siblings("li").attr("class","");
+		$("ul").stop().animate({top:-$("#box").height()*($(this).index())},1000);
 		num=$(this).index();
-		$uli.attr("class","active").siblings("li").attr("class","");
-		if(temp < num){
-			$uli.slice(1).css("top",$uli.height());
-			$uli.eq(temp).animate({top:-$uli.height()},1000);
-		}else if(temp > num){
-			$uli.slice(1).css("top",-$uli.height());
-			$uli.eq(temp).animate({top:$uli.height()},1000);
-		}
-		$uli.eq($(this).index()).animate({top:0},1000);
 	});
 	$("ol").delegate("li","mouseout",function(){
 		timer=setInterval(goon,2000);
 	});
+	
 	function goon(){
 		if(num==$oli.length-1){
 			num=0;
 		}else{
 			num++;
 		}
-		clearInterval(timer);
+		$("ul").stop().animate({top:-$("#box").height()*num},1000);
 		$oli.eq(num).attr("class","active").siblings("li").attr("class","");
-		if(temp < num){
-			$uli.slice(1).css("top",$uli.height());
-			$uli.eq(temp).animate({top:-$uli.height()},1000);
-		}else if(temp > num){
-			$uli.slice(1).css("top",-$uli.height());
-			$uli.eq(temp).animate({top:$uli.height()},1000);
-		}
-		$uli.eq(num).animate({top:0},1000);
 	}
 })
-
 
 </script>
 </head>
